--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 .DS_Store
-node_modules
-/dist
+Thumbs.db
+node_modules/
+dist/
 
 # local env files
+*.env
 .env.local
 .env.*.local
 
 # Log files
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
